--- a/app/src/main/res/layout/fragment_gio_hang.xml
+++ b/app/src/main/res/layout/fragment_gio_hang.xml
@@ -1,64 +1,73 @@
 <!-- activity_shopping_cart.xml -->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
-    android:paddingTop="16dp"
-    android:paddingRight="16dp"
-    android:paddingBottom="16dp"
     tools:context=".fragments.GioHangFragment">
-    <TextView
-        android:id="@+id/txtGioHang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="Giỏ Hàng"
-        android:layout_marginLeft="130dp"
-        android:textSize="26dp"
-        android:textStyle="bold"/>
-
-    <ListView
-        android:id="@+id/listViewCart"
-        android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:dividerHeight="0.5dp"
-        android:layout_marginBottom="8dp"
-        android:layout_below="@id/txtGioHang"></ListView>
-
-
-    <Spinner
-        android:id="@+id/spinnerPaymentMethod"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/listViewCart"
-        android:layout_marginTop="8dp"
-        android:padding="8dp"
-        />
+        android:orientation="vertical"
+        android:layout_marginBottom="190dp">
+        <androidx.appcompat.widget.Toolbar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Giỏ hàng"
+                android:textStyle="bold"
+                android:textSize="20dp"
+                android:layout_gravity="center"
+                />
+        </androidx.appcompat.widget.Toolbar>
 
-    <EditText
-        android:id="@+id/etDiscountCode"
+
+        <ListView
+            android:id="@+id/listViewCart"
+            android:layout_width="match_parent"
+            android:layout_marginTop="10dp"
+            android:layout_height="wrap_content"
+            android:dividerHeight="10sp"
+            android:divider="@color/white"
+            android:layout_marginHorizontal="8dp"/>
+    </LinearLayout>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/spinnerPaymentMethod"
-        android:layout_marginTop="8dp"
-        android:hint="Discount Code"/>
+        android:orientation="vertical"
+        android:layout_gravity="bottom"
+        android:layout_marginBottom="100dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="16dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Tổng tiền"
+                android:layout_weight="1"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="180000đ"
+                android:textSize="16sp"
+                />
+        </LinearLayout>
+        <Button
+            android:id="@+id/btnDatHang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Đặt hàng"
+            />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnApplyDiscount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/etDiscountCode"
-        android:layout_marginTop="8dp"
-        android:text="Apply Discount"/>
 
-    <Button
-        android:id="@+id/btnCheckout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:text="Checkout"
-        android:textColor="#ffffff"
-        android:padding="16dp"/>
-</RelativeLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
