--- a/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
@@ -60,6 +60,7 @@
                                 android:layout_weight="1"
                                 android:orientation="vertical">
                                 <TextView
+                                    android:id="@+id/tvTenMonAnCT"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="Tên món ăn"
@@ -68,6 +69,7 @@
                                     android:textStyle="bold"
                                     />
                                 <TextView
+                                    android:id="@+id/tvGiaMonAnCT"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:text="30000đ / suất"
