--- a/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
+++ b/app/src/main/res/layout/activity_thong_tin_nha_hang.xml
@@ -27,7 +27,7 @@
             android:textSize="24dp"
             android:layout_gravity="center"/>
     </androidx.appcompat.widget.Toolbar>
-    
+
     <ImageView
         android:id="@+id/imgShop"
         android:layout_width="400dp"
@@ -37,104 +37,60 @@
         />
 
     <EditText
-        android:id="@+id/tvName"
+        android:layout_marginTop="40dp"
+        android:id="@+id/edName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:text="Name shop"
+        android:hint="Name shop"
         android:textSize="24dp"
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/tvPhoneNumber"
+        android:id="@+id/edPhoneNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="10dp"
-        android:text="0123456789"
+        android:hint="0123456789"
         android:textSize="16dp" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         >
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="23dp"
+            android:layout_marginTop="16dp"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="42dp"
                 android:layout_height="42dp"
                 android:layout_marginStart="16dp"
-                android:src="@drawable/shop" />
+                android:src="@drawable/facebook1" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="10dp"
-                android:text="Products:"
-                android:textStyle="bold"
-                android:textSize="18dp" />
-
-            <EditText
-                android:id="@+id/tvProduct"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginStart="20dp"
-                android:layout_weight="1"
-                android:text="123"
-                android:textSize="12dp"
-                android:textColor="@color/pink" />
-
-
-        </LinearLayout>
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="8dp"
-            android:background="#CCCCCC"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginTop="16dp"
-            >
-            <ImageView
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:src="@drawable/facebook1"
-                android:layout_marginStart="16dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:text="Fanpage:"
-                android:textStyle="bold"
                 android:textSize="18dp"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                />
+                android:textStyle="bold" />
 
             <EditText
-                android:id="@+id/tvFanpage"
+                android:id="@+id/edFanpage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="20dp"
                 android:layout_weight="1"
-                android:textSize="12dp"
-                android:text="https:/www.facebook.comlocale=vi_VN"
+                android:hint="https:/www.facebook.comlocale=vi_VN"
                 android:textColor="@color/pink"
-                />
+                android:textSize="12dp" />
 
         </LinearLayout>
         <View
@@ -170,13 +126,13 @@
                 android:textSize="18dp" />
 
         <EditText
-            android:id="@+id/tvAddress"
+            android:id="@+id/edAddress"
             android:layout_width="262dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginStart="20dp"
             android:layout_weight="1"
-            android:text="Đà nẵng"
+            android:hint="Address"
             android:textSize="12dp"
             android:textColor="@color/pink" />
 
@@ -187,6 +143,13 @@
             android:layout_marginTop="8dp"
             android:background="#CCCCCC"/>
     </LinearLayout>
-
+        <Button
+            android:id="@+id/btnUpdate"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:textSize="32dp"
+            android:text="Update"/>
 
 </LinearLayout>
