--- a/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
@@ -40,6 +40,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="10dp"
                     >
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -78,6 +79,7 @@
                                     android:textColor="#983F3F"
                                     android:textSize="20dp"
                                     android:textStyle="bold"
+                                    android:layout_marginBottom="10dp"
                                     />
                             </LinearLayout>
                             <ImageView
