--- a/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
@@ -11,14 +11,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolBarCT"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/back1"
-                />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -47,6 +43,7 @@
                         android:layout_height="wrap_content"
                         android:orientation="vertical">
                         <ImageView
+                            android:id="@+id/imgFoodCT"
                             android:layout_width="match_parent"
                             android:layout_height="200dp"
                             android:src="@drawable/img_food"
