--- a/app/src/main/res/layout/activity_dang_ky.xml
+++ b/app/src/main/res/layout/activity_dang_ky.xml
@@ -10,14 +10,15 @@
     >
 
     <LinearLayout
-        android:layout_width="400dp"
+        android:layout_width="match_parent"
         android:layout_height="110dp"
         android:layout_marginTop="10dp"
+        android:layout_marginHorizontal="10dp"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="68dp"
+            android:layout_height="wrap_content"
             android:layout_margin="30dp"
             android:text="FOODY!"
             android:textColor="@color/black"
@@ -26,8 +27,9 @@
 
         <ImageView
             android:layout_width="85dp"
-            android:layout_height="95dp"
-            android:src="@drawable/xinchao" />
+            android:layout_height="85dp"
+            android:src="@drawable/xinchao"
+            android:layout_gravity="center"/>
 
     </LinearLayout>
 
@@ -70,45 +72,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="or continue with"
-        android:layout_marginLeft="150dp"
         android:textColor="@color/black"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         />
-
-
-<!--    <EditText-->
-<!--        android:id="@+id/edtUsername"-->
-<!--        android:layout_width="365dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_margin="20dp"-->
-<!--        android:hint="Username" />-->
 
     <EditText
         android:id="@+id/edtEmail"
-        android:layout_width="365dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:hint="Email" />
     <EditText
         android:id="@+id/edtPassword"
-        android:layout_width="365dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:inputType="textPassword"
         android:hint="Password"/>
     <EditText
         android:id="@+id/edtRePassword"
-        android:layout_width="365dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
+        android:inputType="textPassword"
         android:hint="Re-Password"/>
 
     <Button
         android:id="@+id/btnRegister"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="20dp"
-        android:text="Create an account ->"
+        android:text="Create an account"
         android:textStyle="bold"
+        android:layout_gravity="center"
         android:textSize="20dp"
         android:textColor="@color/black"
         android:background="@drawable/btn_login"
@@ -118,14 +115,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Already have an account?"
-            android:layout_marginLeft="100dp"
-            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             />
         <TextView
@@ -133,7 +130,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
             android:text="SIGN IN "
             android:textColor="#EE5050" />
     </LinearLayout>
