--- a/app/src/main/res/layout/activity_dang_nhap.xml
+++ b/app/src/main/res/layout/activity_dang_nhap.xml
@@ -14,62 +14,63 @@
         android:layout_height="247dp"
         android:layout_margin="10dp"
         android:src="@drawable/foodyback"
-
         />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="FOODY"
-        android:layout_marginLeft="140dp"
-        android:textSize="40dp"
+        android:textSize="40sp"
         android:textStyle="bold"
         android:textColor="@color/black"
+        android:layout_gravity="center"
         />
 
     <EditText
         android:id="@+id/edtEmail"
         android:layout_width="333dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
         android:layout_marginTop="10dp"
         android:hint="Email"
+        android:layout_gravity="center"
         />
 
     <EditText
         android:id="@+id/edtPass"
         android:layout_width="333dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
         android:hint="password"
+        android:inputType="textPassword"
         android:layout_marginTop="10dp"
+        android:layout_gravity="center"
         />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forgot Password?"
         android:textColor="#EE5050"
-        android:layout_marginLeft="250dp"
         android:layout_marginTop="10dp"
+        android:layout_gravity="right"
+        android:layout_marginEnd="50dp"
         />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="277dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="70dp"
         android:layout_marginTop="10dp"
-        android:text="Sign In ->"
-        android:textStyle="bold"
-        android:textSize="20dp"
-        android:textColor="@color/black"
         android:background="@drawable/btn_login"
-        />
+        android:text="Sign In"
+        android:textColor="@color/black"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_gravity="center"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="or continue with"
-        android:layout_marginLeft="150dp"
+        android:layout_gravity="center"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
         />
@@ -111,22 +112,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
         >
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Don't have an account?"
-            android:layout_marginLeft="120dp"
-            android:layout_marginTop="10dp"
             android:textColor="@color/black"
             />
         <TextView
             android:id="@+id/txtSignUp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             android:text="SIGN UP "
             android:textColor="#EE5050" />
     </LinearLayout>
