--- a/app/src/main/res/layout/fragment_tai_khoan.xml
+++ b/app/src/main/res/layout/fragment_tai_khoan.xml
@@ -19,14 +19,18 @@
             android:textSize="20dp"
             android:textStyle="bold"/>
     </androidx.appcompat.widget.Toolbar>
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/image"
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imgAVT"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/user_default"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        app:civ_border_color="@color/white"
+        app:civ_border_width="1dp"
         />
     <TextView
+        android:id="@+id/tvTenND"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nguyễn Văn A"
