--- a/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_mon_an.xml
@@ -27,7 +27,7 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -128,9 +128,12 @@
                     android:textStyle="bold"
                     />
                 <ListView
+                    android:id="@+id/lvDanhGia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
+                    android:scrollbars="none"
+
                     />
             </LinearLayout>
         </ScrollView>
