--- a/app/src/main/res/layout/activity_tim_kiem.xml
+++ b/app/src/main/res/layout/activity_tim_kiem.xml
@@ -43,16 +43,15 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:numColumns="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/searchView">
     </androidx.recyclerview.widget.RecyclerView>
-
 
 
 </LinearLayout>
